Refactoring of building and site services, advanced mapper impl, test methods on TechnicianController, static data endpoint for Enums, endpoints for getting all buildings and sites, singe filters completed