@@ -5,24 +5,18 @@ import com.aueb.issues.model.enums.IssueType;
 import com.aueb.issues.model.enums.Priority;
 import com.aueb.issues.model.enums.Status;
 import com.aueb.issues.model.mapper.ApplicationMapper;
-import com.aueb.issues.model.services.BuildingService;
-import com.aueb.issues.model.services.SiteService;
 import com.aueb.issues.repository.ApplicationRepository;
 import com.aueb.issues.web.dto.ApplicationDTO;
 import com.aueb.issues.web.dto.TeacherApplicationsDTO;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.RequestParam;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -58,7 +52,7 @@ public class ApplicationService {
         List<ApplicationDTO> ret = new ArrayList<>();
         try{
             List<ApplicationEntity> issues = applicationRepository.findAll();
-            ret=issues.stream().map(ApplicationMapper.INSTANCE::toDTO).collect(Collectors.toList());
+            ret=issues.stream().map(ApplicationMapper.INSTANCE::toDTO).toList();
         }catch (Exception e){
             log.error(e.toString());
             return null;
@@ -66,9 +60,8 @@ public class ApplicationService {
         return new ResponseEntity<>(ret,HttpStatus.OK);
     }
 
-    public ResponseEntity<List<ApplicationDTO>> getApplicationsBySingleValues( String siteName, String priority, String issueType, String status){
+    public ResponseEntity<List<ApplicationDTO>> getApplicationsBySingleValues( String siteName, String priority, String issueType, String status,String buildingName){
         try {
-            log.info(siteName);
 
 //            if(priority==null|| !(priority.equals(Priority.LOW)||priority.equals(Priority.HIGH)||priority.equals(Priority.MEDIUM))){
 //                log.error("Incorrect Priority");
@@ -79,7 +72,7 @@ public class ApplicationService {
 //                log.error("Incorrect IssueType");
 //                return new ResponseEntity(HttpStatus.BAD_REQUEST);
 //            }
-         //   if(status==null|| !(status.equals(Status.CREATED)||status.equals(Status.REJECTED)||
+//            if(status==null|| !(status.equals(Status.CREATED)||status.equals(Status.REJECTED)||
 //                    status.equals(Status.VALIDATED)||status.equals(Status.ASSIGNED)||status.equals(Status.COMPLETED)
 //                    ||status.equals(Status.ARCHIVED))){
 //                log.error("Incorrect Status");
@@ -90,19 +83,26 @@ public class ApplicationService {
             List<ApplicationEntity> q = applicationRepository.findByValues(siteName,
                     priority==null?null:Priority.valueOf(priority),
                     issueType==null?null:IssueType.valueOf(issueType),
-                    status==null?null:Status.valueOf(status));
-            List<ApplicationDTO> ret = q.stream().map(ApplicationMapper.INSTANCE::toDTO).collect(Collectors.toList());
-            return ResponseEntity.ok(ret);
+                    status==null?null:Status.valueOf(status),
+                    buildingName);
+
+            return ResponseEntity.ok(toDTO(q));
         }
         catch (Exception e){
             log.error(e.toString());
         }
         return ResponseEntity.internalServerError().body(null);
     }
+    public ResponseEntity<List<ApplicationDTO>> getApplicationsByBuilding(String buildingName){
+        List<ApplicationEntity> entities=applicationRepository.findByBuildingName(buildingName);
+        return ResponseEntity.ok(toDTO(entities));
+    }
 
     public ResponseEntity<String> deleteIssue(String id){
         try{
-            applicationRepository.findById(id).orElseThrow(()->new EntityNotFoundException("No such entity found"));
+            applicationRepository.findById(id).orElseThrow(()->{new EntityNotFoundException("No such entity found");
+                return null;
+            });
             applicationRepository.deleteById(id);
             return ResponseEntity.ok(null);
         }catch (Exception e){
@@ -134,5 +134,20 @@ public class ApplicationService {
             log.error(e.toString());
             return null;
         }
+    }
+
+    public ResponseEntity<Map<String,List<String>>> getStaticData(){
+        Map<String,List<String>> ret=new HashMap<>();
+        ObjectMapper mapper=new ObjectMapper();
+        ret.put("IssueTypes",mapper.convertValue(IssueType.values(),List.class));
+        ret.put("Status",mapper.convertValue(Status.values(),List.class));
+        ret.put("Priotity",mapper.convertValue(Priority.values(), List.class));
+        return ResponseEntity.ok(ret);
+
+    }
+
+    public List<ApplicationDTO> toDTO(List<ApplicationEntity> entities){
+
+        return entities.stream().map(ApplicationMapper.INSTANCE::toDTO).toList();
     }
 }
